--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,28 @@
 </head>
 
 <body>
-    <nav class="fixed top-0 left-0 w-full bg-gray-400 flex justify-between items-center h-12 px-4 z-50">
+    <nav class="navbar">
         <a href="#" id="brand">BRAND</a>
         <button type="button" id="hamburger">button</button>
-        <div class="absolute flex flex-col right-0 w-1/2 h-screen top-0 bg-red-400 overflow-y-auto transform translate-x-full transition-transform ease-in-out z-[60]"
-            id="menus">
-            <a href="#" class="flex items-center gap-2 px-4 py-2 hover:bg-black/20">
+        <div id="menus">
+            <a href="#" class="account">
                 <div class="w-10 h-10 bg-gray-300 rounded-full flex-shrink-0"></div>
                 <div class="flex flex-col w-full">
                     <span class="font-bold line-clamp-1 break-all">Syahrul Safarila</span>
-                    <small class="line-clamp-1">192837</small>
+                    <small class="line-clamp-1">NIM: 192837</small>
                 </div>
             </a>
-            <a href="#" class="px-4 py-2 bg-green-400 hover:bg-green-600">Menu</a>
-            <a href="#" class="px-4 py-2 bg-green-400 hover:bg-green-600">Menu</a>
-            <a href="#" class="px-4 py-2 bg-green-400 hover:bg-green-600">Menu</a>
-            <a href="#" class="px-4 py-2 bg-green-400 hover:bg-green-600">Menu</a>
-            <a href="#" class="px-4 py-2 bg-green-400 hover:bg-green-600">Menu</a>
-            <p class="text-center py-2 px-4">&copy; 2024 Syahrul Safarila</p>
+            <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
+            <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
+            <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
+            <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
+            <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
+            <p class="text-center py-3 px-4">&copy; 2024 Syahrul Safarila</p>
         </div>
-        <div class="absolute z-[55] left-0 h-screen w-full top-0 hidden transition-colors ease-in-out" id="backdrop">
+        <div id="backdrop" class="hidden">
         </div>
     </nav>
-    <main class="mt-12 p-4">
+    <main>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
             aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
         </p>
