--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="#" id="brand">BRAND</a>
-        <button type="button" id="hamburger">button</button>
-        <div id="menus">
+    <nav class="bg-black/30 h-12 fixed top-0 left-0 w-full flex items-center z-50">
+        <div class="max-w-screen-lg w-full mx-auto flex items-center justify-between px-4">
+            <a href="#" id="brand">BRAND</a>
+            <button type="button" class="lg:hidden" id="hamburger">button</button>
+        </div>
+    </nav>
+    <main>
+        <div id="sidebar">
             <a href="#" class="account">
                 <div class="w-10 h-10 bg-gray-300 rounded-full flex-shrink-0"></div>
                 <div class="flex flex-col w-full">
@@ -25,56 +29,77 @@
             <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
             <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
             <a href="#" class="px-4 py-3 bg-green-400 hover:bg-green-600">Menu</a>
-            <p class="text-center py-3 px-4">&copy; 2024 Syahrul Safarila</p>
+            <p class="text-center py-3 px-4 text-xs">Program ini dibuat untuk menyelesaikan pendidikan</p>
         </div>
-        <div id="backdrop" class="hidden">
+        <div id="content">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa
+                harum
+                aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur
+                cumque.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
+                molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid
+                quos
+                quae.</p>
         </div>
-    </nav>
-    <main>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur optio natus, dolorem cum, ipsa harum
-            aspernatur molestias quam eum quis culpa beatae ut odit! Error, aut. Voluptatem officiis consequatur cumque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque recusandae vitae tenetur veniam rem fuga
-            molestias iusto mollitia distinctio, iure odio corrupti, labore eveniet illum cupiditate autem, aliquid quos
-            quae.</p>
     </main>
 
+    <div id="nav-backdrop" class="hidden">
+    </div>
     <script src="./navbar.js"></script>
 </body>
 
