--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                             <img src="./assets/icons/number-one.svg" alt="" class="w-8 h-8">
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
                             <div class="flex items-center gap-2">
-                                <a href="#">Syahrul S</a>
+                                <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
                                 <span class="cursor-pointer transition-transform ease-in-out select-none"
                                     onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
                                     <img src="./assets/icons/chevron.svg" alt="arrow">
@@ -101,7 +101,7 @@
                             <img src="./assets/icons/number-two.svg" alt="" class="w-8 h-8">
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
                             <div class="flex items-center gap-2">
-                                <a href="#">Syahrul S</a>
+                                <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
                                 <span class="cursor-pointer transition-transform ease-in-out select-none"
                                     onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
                                     <img src="./assets/icons/chevron.svg" alt="arrow">
@@ -129,7 +129,7 @@
                             <img src="./assets/icons/number-three.svg" alt="" class="w-8 h-8">
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
                             <div class="flex items-center gap-2">
-                                <a href="#">Syahrul S</a>
+                                <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
                                 <span class="cursor-pointer transition-transform ease-in-out select-none"
                                     onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
                                     <img src="./assets/icons/chevron.svg" alt="arrow">
@@ -157,7 +157,7 @@
                             <div class="w-8 h-8 flex justify-center items-center font-semibold">4</div>
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
                             <div class="flex items-center gap-2">
-                                <a href="#">Syahrul S</a>
+                                <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
                                 <span class="cursor-pointer transition-transform ease-in-out select-none"
                                     onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
                                     <img src="./assets/icons/chevron.svg" alt="arrow">
@@ -185,7 +185,7 @@
                             <div class="w-8 h-8 flex justify-center items-center font-semibold">5</div>
                             <img src="./assets/images/IU.jpeg" alt="profile" class="w-10 h-10 rounded-full">
                             <div class="flex items-center gap-2">
-                                <a href="#">Syahrul S</a>
+                                <a href="#" class="font-semibold line-clamp-1">Syahrul S</a>
                                 <span class="cursor-pointer transition-transform ease-in-out select-none"
                                     onclick="event.preventDefault(); this.closest('#user-points').querySelector('#detail-points').classList.toggle('hidden'); this.classList.toggle('rotate-180')">
                                     <img src="./assets/icons/chevron.svg" alt="arrow">
